# hlagent

./: .gitignore  package-lock.json  package.json  plan.txt  pyproject.toml  requirements.txt  startup.txt  vercel.json
api/: index.py
convex/: hdcModel.ts  memory.ts  researchConfig.ts  schema.ts  tasks.ts
convex/_generated/: api.d.ts
data/: CODEBASE.md  HEARTBEAT.md  MEMORY.md  SOUL.md  benchmark_history.jsonl  hdc_memory.json  hdc_model.meta.json  heartbeat_cursor.json  improvements.jsonl  trained_hashes.json
data/sessions/: 0c88a3e1-9a55-4477-aee8-562b9ea07972.json  5257a645-1c77-4730-83fd-f8098dcedc07.json  95c00e4c-a813-4cc0-ba4b-00bfaa59c1ef.json  a81af296-b888-46ff-b782-b4393dc235d4.json  c22b2fe0-42db-4990-9ec9-3c1e877d51ff.json  test-email-123.json
nextjstester/: package-lock.json  package.json
nextjstester/app/: convex-provider.tsx  globals.css  layout.tsx  page.tsx
nextjstester/app/components/: AgentTester.tsx  DataBackground.tsx  ResearchTabLive.tsx
nextjstester/lib/: agent-api.ts  convex-api.ts  types.ts
super_agent/: __init__.py
super_agent/app/: main.py
super_agent/app/api/: deps.py  routes.py  websocket_manager.py
super_agent/app/core/: __init__.py  config.py  gemini_client.py  security.py
super_agent/app/domain/: agent_state.py  blueprint_status.py  chat_schemas.py  hdc.py  hdc_engine.py  hdc_lm.py  math_schemas.py  quantum_inspired.py  reasoning.py
super_agent/app/infrastructure/: __init__.py  ast_liveness.py  convex_store.py  git_safe.py  hdc_memory_store.py  intent_router.py  (+2 more)
tests/: conftest.py  test_smoke.py
(+12 files in other folders)
